# LRC-Codesign

./: .gitignore
include/: Common.h  combination_generator.h  placement_strategy.h
src/: main.cpp
test/: CMakeLists.txt
